Fixed issue for button placement on mobile

--- a/source/assets/css/style.scss
+++ b/source/assets/css/style.scss
@@ -287,7 +287,7 @@ button svg {
 }
 
 button {
-	padding: 1em 0 5em;
+	padding: 3em 0 5em;
 }
 
 #button-top {
